@@ -4,15 +4,15 @@ import org.apache.commons.io.IOUtils;
 
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class httpGet {
-    public static String contentString(String url){
+    private static InputStream getIS(String url){
         try {
-            HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
             connection.setInstanceFollowRedirects(false);
             connection.setConnectTimeout(5000);
             connection.setReadTimeout(5000);
@@ -20,33 +20,33 @@ public class httpGet {
             String newUrl;
             while (responseCode == HttpURLConnection.HTTP_MOVED_PERM || responseCode == HttpURLConnection.HTTP_MOVED_TEMP) {
                 newUrl = connection.getHeaderField("Location");
-                connection = (HttpURLConnection) new URL(newUrl).openConnection();
+                connection = (HttpURLConnection) URI.create(newUrl).toURL().openConnection();
                 connection.setInstanceFollowRedirects(false);
                 responseCode = connection.getResponseCode();
             }
-            return IOUtils.toString(connection.getInputStream(), Charset.defaultCharset());
+            return connection.getInputStream();
+        } catch (Exception ignore) {
+            return null;
+        }
+    }
+    public static String contentString(String url){
+        InputStream is = getIS(url);
+        if (is == null){
+            return "";
+        }
+        try{
+            return IOUtils.toString(is, Charset.defaultCharset());
         } catch (Exception ignore) {
             return "";
         }
     }
-    public static boolean download(String url, String saveFileString){
-        try{
-            HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
-            connection.setInstanceFollowRedirects(false);
-            connection.setConnectTimeout(5000);
-            connection.setReadTimeout(5000);
-            int responseCode = connection.getResponseCode();
-            String newUrl;
-            while (responseCode == HttpURLConnection.HTTP_MOVED_PERM || responseCode == HttpURLConnection.HTTP_MOVED_TEMP) {
-                newUrl = connection.getHeaderField("Location");
-                connection = (HttpURLConnection) new URL(newUrl).openConnection();
-                connection.setInstanceFollowRedirects(false);
-                responseCode = connection.getResponseCode();
-            }
-            Files.copy(connection.getInputStream(), Paths.get(saveFileString));
-        } catch (Exception ignore) {
-            return false;
+    public static void download(String url, String saveFileString){
+        InputStream is = getIS(url);
+        if (is == null){
+            return;
         }
-        return true;
+        try{
+            Files.copy(is, Paths.get(saveFileString));
+        } catch (Exception ignore) {}
     }
 }
